--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost;Database=planning_poker;User Id=sa;Password=p#bqaOAh!b;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
