Added Jwt Authentication

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "Strong Jwt Server Key"  
 }
